waybar/style.css
* {
  font-size: 14px;
  font-family: "JetBrainsMono Nerd Font Propo";
  font-weight: 900;
  border-radius: 0px;
  min-height: 0;
}

tooltip {
  color: #ffffff;
  border: 2px solid #ffffff;
}

button:hover {
  text-shadow: none;
  box-shadow: none;
  background: none;
  transition: none;
}

#custom-arch {
  border-left: 2px solid #ffffff;
  border-bottom: 2px solid #ffffff;
  border-top: 2px solid #ffffff;
  color: #000000;
  font-size: 22px;
  transition: all 0.3s ease-out;
  padding: 0px 13px 0px 13px;
  background-color: #ffffff;
}

#custom-power {
  border-right: 2px solid #ffffff;
  border-bottom: 2px solid #ffffff;
  border-top: 2px solid #ffffff;
  color: #000000;
  font-size: 28px;
  background-color: #ffffff;
  padding: 0px 13px 0px 13px;
}

#custom-lock {
  border-bottom: 2px solid #ffffff;
  border-left: 2px solid #ffffff;
  border-top: 2px solid #ffffff;
  color: #ffffff;
  margin-left: 4px;
  background-color: #000000;
  font-size: 17px;
  padding: 0px 15px 0px 15px;
}

#custom-reboot {
  border-bottom: 2px solid #ffffff;
  border-top: 2px solid #ffffff;
  color: #ffffff;
  background-color: #000000;
  font-size: 17px;
  padding: 0px 15px 0px 15px;
}

#custom-off {
  border-right: 2px solid #ffffff;
  border-top: 2px solid #ffffff;
  border-bottom: 2px solid #ffffff;
  color: #ffffff;
  font-size: 17px;
  background-color: #000000;
  padding: 0px 15px 0px 15px;
}

#mpd {
  border-bottom: 2px solid #ffffff;
  border-top: 2px solid #ffffff;
  color: #ffffff;
  padding: 0px 10px 0px 10px;
  background-color: #000000;
}

#battery {
  border-top: 2px solid #ffffff;
  border-bottom: 2px solid #ffffff;
  color: #ffffff;
  padding: 0px 8px 0px 8px;
  background-color: #000000;
}

#wireplumber {
  border-top: 2px solid #ffffff;
  border-bottom: 2px solid #ffffff;
  border-left: 2px solid #ffffff;
  color: #ffffff;
  padding: 0px 8px 0px 13px;
  background-color: #000000;
}

#tray {
  border: 2px solid #ffffff;
  padding: 0px 12px 0px 12px;
  margin-right: 4px;
  color: #ffffff;
  background-color: #000000;
}

#tray menu {
  border: 2px solid #ffffff;
  background-color: #000000;
  color: #ffffff;
  padding: 6px;
}

#tray > .active:hover {
  opacity: 0.82;
  transition: all 0.23s ease-in-out;
}

#tray menu menuitem:hover {
  background-color: #ffffff;
  color: #000000;
}

#clock {
  border-bottom: 2px solid #ffffff;
  border-right: 2px solid #ffffff;
  border-top: 2px solid #ffffff;
  color: #ffffff;
  margin-right: 4px;
  padding: 0px 13px 0px 8px;
  background-color: #000000;
}

#cava {
  border-right: 2px solid #ffffff;
  border-bottom: 2px solid #ffffff;
  border-top: 2px solid #ffffff;
  color: #ffffff;
  padding: 0px 2px 0px 9px;
  background-color: #000000;
}

#network {
  border-bottom: 2px solid #ffffff;
  border-top: 2px solid #ffffff;
  color: #ffffff;
  background-color: #000000;
  padding: 0px 8px 0px 8px;
}

#backlight {
  border-bottom: 2px solid #ffffff;
  border-top: 2px solid #ffffff;
  color: #ffffff;
  background-color: #000000;
  padding: 0px 8px 0px 8px;
}

#workspaces {
  border-left: 2px solid #ffffff;
  border-bottom: 2px solid #ffffff;
  border-top: 2px solid #ffffff;
  padding: 0px 0px 0px 2px;
  background-color: #000000;
}

#workspaces button {
  transition: none;
  color: #858585;
  border: none;
}

#workspaces button label {
  transition: all 150ms ease-in-out;
  transition: all 168ms linear;
  font-size: 10px;
}

#workspaces button.active label {
  font-size: 16px;
}

#workspaces button.active {
  color: #ffffff;
}

#workspaces button.active:hover {
  color: #d0d0d0;
}

#workspaces button:hover {
  color: #a0a0a0;
}

window#waybar {
  background-color: transparent;
}

#workspaces button:hover {
  border-color: transparent;
}

#custom-reboot:hover,
#custom-off:hover,
#mpd:hover,
#clock:hover,
#wireplumber:hover,
#backlight:hover,
#custom-lock:hover {
  color: #c0c0c0;
  transition: all 0.3s ease-out;
}

#custom-arch:hover,
#custom-power:hover {
  color: #888888;
  transition: all 0.3s ease-out;
}

